--- a/src/api gateways/Gouro.Bff.Compras/appsettings.Production.json
+++ b/src/api gateways/Gouro.Bff.Compras/appsettings.Production.json
@@ -1,7 +1,4 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=gouro-sql-server;Database=Gouro;MultipleActiveResultSets=true;User Id=sa;Password=MinhaDb@123"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -9,9 +6,17 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "AllowedHosts": "*",
+  "CatalogoUrl": "http://gouro-api-catalogo:5301",
+  "CarrinhoUrl": "http://gouro-api-carrinho:5201",
+  "PedidoUrl": "http://gouro-api-pedido:5701",
+  "PagamentoUrl": "http://gouro-api-pagamento:5601",
+  "ClienteUrl": "http://gouro-api-cliente:5401",
+
   "MessageQueueConnection": {
     "MessageBus": "host=rabbit-gouro:5672;publisherConfirms=true;timeout=30;username=gouro;password=gouro"
   },
+
   "AppSettings": {
     "AutenticacaoJwksUrl": "http://gouro-api-identidade:5101/jwks"
   }
