--- a/src/services/Gouro.Pagamento.API/appsettings.Production.json
+++ b/src/services/Gouro.Pagamento.API/appsettings.Production.json
@@ -1,7 +1,4 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=gouro-sql-server;Database=Gouro;MultipleActiveResultSets=true;User Id=sa;Password=MinhaDb@123"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -9,10 +6,17 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=gouro-sql-server;Database=Gouro;MultipleActiveResultSets=true;User Id=sa;Password=MinhaDb@123"
+  },
   "MessageQueueConnection": {
     "MessageBus": "host=rabbit-gouro:5672;publisherConfirms=true;timeout=30;username=gouro;password=gouro"
   },
   "AppSettings": {
     "AutenticacaoJwksUrl": "http://gouro-api-identidade:5101/jwks"
+  },
+  "PagamentoConfig": {
+    "DefaultApiKey": "ak_ewr4dsWehiwAT",
+    "DefaultEncryptionKey": "ek_SweRsdFas4uT5"
   }
 }
