--- a/src/services/Gouro.Pedido.API/appsettings.Production.json
+++ b/src/services/Gouro.Pedido.API/appsettings.Production.json
@@ -1,6 +1,10 @@
 {
+  "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=gouro-sql-server;Database=Gouro;MultipleActiveResultSets=true;User Id=sa;Password=MinhaDb@123"
+  },
+  "MessageQueueConnection": {
+    "MessageBus": "host=rabbit-gouro:5672;publisherConfirms=true;timeout=30;username=gouro;password=gouro"
   },
   "Logging": {
     "LogLevel": {
@@ -8,9 +12,6 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  },
-  "MessageQueueConnection": {
-    "MessageBus": "host=rabbit-gouro:5672;publisherConfirms=true;timeout=30;username=gouro;password=gouro"
   },
   "AppSettings": {
     "AutenticacaoJwksUrl": "http://gouro-api-identidade:5101/jwks"
