--- a/src/web/Gouro.WebApp.MVC/appsettings.Production.json
+++ b/src/web/Gouro.WebApp.MVC/appsettings.Production.json
@@ -1,8 +1,8 @@
 {
-  "AutenticacaoUrl": "https://localhost:5101",
+  "AutenticacaoUrl": "http://gouro-api-identidade:5101",
   "CatalogoUrl": "http://gouro-api-catalogo:5301",
-  "ComprasBffUrl": "https://localhost:5501",
-  "ClienteUrl": "https://localhost:5401",
+  "ComprasBffUrl": "http://gouro-api-bff-compras:5501",
+  "ClienteUrl": "http://gouro-api-cliente:5401",
 
   "Logging": {
     "LogLevel": {
